--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# OS
+.DS_Store
+
 # Binaries for programs and plugins
 *.exe
 *.dll
@@ -12,3 +15,4 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
